# galois-rs

./: .gitignore  Cargo.toml  README.md
src/: conway.rs  error.rs  factor.rs  lfsr.rs  lib.rs  linalg.rs  math.rs  modular.rs  ntt.rs  options.rs  prime.rs  primitive_root.rs
src/codes/: decode.rs  field_code.rs  field_decode.rs  mod.rs
src/databases/: conway.rs  irreducible.rs  mod.rs  prime_factors.rs
src/field/: array_kind.rs  big_array.rs  big_element.rs  big_field.rs  bigint.rs  broadcast.rs  cache.rs  element.rs  factory.rs  mod.rs  normal.rs  ops.rs
src/linalg/: galois_linalg.rs
src/poly/: big_factor.rs  big_field_poly.rs  big_poly.rs  factor.rs  field_poly.rs  integer.rs  mod.rs  parse.rs  poly_kind.rs  prime.rs  primitive.rs
